<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fff1f1f1"
    android:weightSum="1">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10px"
        android:textSize="30sp"
        android:textStyle="bold"
        android:text="@string/acceleration"
        android:textColor="#000000"
        android:layout_weight="0.12"
        android:gravity="center"/>

    <View
        android:background="#000000"
        android:layout_width="fill_parent"
        android:layout_height="1sp">
    </View>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10px"
        android:textSize="20sp"
        android:textStyle="italic"
        android:text="a_x"
        android:textColor="#000000"
        />
    <TextView
        android:id="@+id/textViewAX"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10px"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/accelerationx"
        android:textColor="#000000"
        />

    <View
        android:background="#000000"
        android:layout_width="fill_parent"
        android:layout_height="1sp">
    </View>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10px"
        android:textSize="20sp"
        android:textStyle="italic"
        android:text="a_y"
        android:textColor="#000000"
        />
    <TextView
        android:id="@+id/textViewAY"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10px"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/accelerationy"
        android:textColor="#000000"
        />

    <View
        android:background="#000000"
        android:layout_width="fill_parent"
        android:layout_height="1sp">
    </View>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10px"
        android:textSize="20sp"
        android:textStyle="italic"
        android:text="a_z"
        android:textColor="#000000"
        />
    <TextView
        android:id="@+id/textViewAZ"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10px"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/accelerationz"
        android:textColor="#000000"
        />

    <View
        android:background="#000000"
        android:layout_width="fill_parent"
        android:layout_height="1sp">
    </View>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10px"
        android:textSize="20sp"
        android:textStyle="italic"
        android:text="modulo"
        android:textColor="#000000"
        />
    <TextView
        android:id="@+id/textViewA"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10px"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/acceleration"
        android:textColor="#000000"
        />

    <View
        android:background="#000000"
        android:layout_width="fill_parent"
        android:layout_height="1sp">
    </View>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10px"
        android:textSize="20sp"
        android:textStyle="italic"
        android:text="a_maxima"
        android:textColor="#000000"
        />
    <TextView
        android:id="@+id/textViewAmax"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10px"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/accelerationM"
        android:textColor="#000000"
        />

    <View
        android:background="#000000"
        android:layout_width="fill_parent"
        android:layout_height="1sp">
    </View>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10px"
        android:textSize="20sp"
        android:textStyle="italic"
        android:text="@string/gravitys"
        android:textColor="#000000"
        />
    <TextView
        android:id="@+id/textViewG"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10px"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="Gravedad_standard"
        android:textColor="#000000"
        />
</LinearLayout>
